--- a/css/editor.css
+++ b/css/editor.css
@@ -1,16 +1,6 @@
 body{
     background-color:black;
 }
-.btn-style {
-    width: 20px;
-    height: 20px;
-    border: 0;
-    background: transparent;
-    padding: 0;
-    color: white;
-    transform: translateY(-5px);
-    margin: 2px;
-}
 
 .close {
     border:0;
@@ -59,35 +49,23 @@ body{
     border-radius: 2px;
 }
 
-.btn-align {
-    width: 20px;
-    height: 20px;
-    border: 0;
-    background: transparent;
-    padding: 0;
-    color: white;
-    transform: translateY(-5px);
-    margin: 2px;
+
+.slidecontainer{
+    display: flex; 
+    align-items: center;
+    justify-content: center;
 }
 
-.btn-decoration {
-    width: 20px;
-    height: 20px;
-    border: 0;
-    background: transparent;
-    padding: 0;
-    color: white;
-    transform: translateY(-5px);
-    margin: 2px;
-}
 
 .slider {
-    width: 80%;
+    width: 100%;
+    margin:5px;
+    color:#FFD843;
+    background-color: #FFD843;;
 }
 
 .selected i {
-
-    color: #4CAF50;
+    color:#FFD843;
 }
 
 select {
@@ -113,7 +91,7 @@ select {
 }
 
 .widget {
-    border-radius: 2px;
+    border-radius: 3px;
     width: 300px;
 
     color: white;
@@ -125,6 +103,24 @@ select {
     filter: drop-shadow(3px 10px 15px rgba(0, 0, 0, 1));
 }
 
+.widget-sm {
+    border-radius: 5px;
+
+    line-height: 1;
+    color: white;
+    display: none;
+    position: absolute;
+    z-index: 100;
+    margin: 0px;
+    filter: drop-shadow(3px 10px 15px rgba(0, 0, 0, 1));
+}
+.p-10{
+    padding: 10px;
+}
+
+.widget-sm span{
+    font-size: 12px;
+}
 .widget-models {
     padding: 10px;
     overflow-x: hidden;
@@ -138,27 +134,41 @@ select {
     background-color: white;
     color: black;
 }
-
+textarea {
+    margin-top:20px;
+    min-height: 100px;
+    border: 1px solid rgba(0, 0, 0, 0.095);
+    padding:10px;
+}
+textarea:focus {
+    outline: none !important;
+}
 .widget-black {
     background-color: rgba(0, 0, 0, 0.60);
     color: white;
 }
 
 .widget-header {
-
+    border-radius:3px 3px 0px 0px;
     float: center;
-    width: 100%;
+    min-width: 100%;
     height: 40px;
-    background-color: black;
+    background: rgba(0, 0, 0, 0.9);
     margin: 0px;
     padding: 0px;
-    color: white;
+    color: white
 }
 
 .konvajs-content {
     margin: 0 auto;
+    background-color: #fff;
+    background-image: 
+        linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc),
+        linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
+    background-size: 20px 20px; /* Ajuste o tamanho do quadrado */
+    background-position: 0 0, 10px 10px; /* Offset para criar o xadrez */
     box-shadow: 0 0 0 px black;
-    background-color: white;
+
 }
 
 #input-text-edit::selection {
@@ -170,18 +180,10 @@ select {
     background-color: rgba(0, 0, 0, 0.20)
 }
 
-.editor {
-    margin: 0 auto;
-    margin-top: 50px;
-    width: 1000px;
-    box-shadow: 0 0 0.1em black;
-    height: 700px !important;
+.editor {  
+    width:100%;
+    height:100%;
 }
-
-.ggwp {
-    margin: 0px 120px;
-}
-
 
 @media (max-width: 768px) {
     .editor-btn {
@@ -214,7 +216,6 @@ select {
         height: 90%;
         display: none;
     }
-
 }
 
 @media (min-width: 769px) {
