--- a/css/editor.css
+++ b/css/editor.css
@@ -51,12 +51,28 @@ body{
 
 
 .slidecontainer{
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y:hidden;
     display: flex; 
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    width: 100%;
 }
-
+.slidecontainer::-webkit-scrollbar {
+    width: 3px;
+    height: 3px; 
+    background-color: transparent; 
+  }
+  .slidecontainer::-webkit-scrollbar-track {
+    background-color: transparent; 
+  }
+  .slidecontainer::-webkit-scrollbar-corner {
+    background-color: transparent; 
+  }
+  .slidecontainer::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 216, 67, 0.2); 
+    border-radius: 10px; 
+  }
 
 .slider {
     width: 100%;
@@ -118,6 +134,7 @@ select {
     border-radius: 5px;
     line-height: 1;
     color: white;
+    width: 375px;
     display: none;
     position: absolute;
     z-index: 100;
@@ -129,7 +146,10 @@ select {
 }
 
 .widget-sm span{
-    font-size: 12px;
+    font-size: 11px;
+}
+.widget-lg span{
+    font-size: 11px;
 }
 .widget-models {
     padding: 10px;
@@ -195,17 +215,23 @@ textarea:focus {
     height:100%;
 }
 
+.widget-row
+{
+    width:auto;
+}
 .widget-body
 {
-    width: 100%;
-  
+    padding: 10px;
+}
+.row{
+    --bs-gutter-x: 0rem !important;
 }
 @media (max-width: 450px) {
     .widget-lg
     {
         width:100%;
     }
-    .widget-body
+    .widget-row
     {
         width: auto;
       
