--- a/style.css
+++ b/style.css
@@ -16,7 +16,51 @@ body {
   background: #2A2B2D;
 
 }
+.ui-tooltip, .arrow:after {
+  background: rgba(0, 0, 0, 0.60);
+}
+.ui-tooltip {
+  font-size: 12px !important;
+  border-radius: 20px !important;
+  font: bold 14px "Helvetica Neue", Sans-Serif;
+  box-shadow: 0 0 7px black;
+  border:0 !important;
+  background-color: rgba(0, 0, 0, 0.60) !important;
+  color: white  !important;
 
+}
+.arrow {
+  width: 70px;
+  height: 16px;
+  overflow: hidden;
+  position: absolute;
+  left: 50%;
+  margin-left: -35px;
+  bottom: -16px;
+}
+.arrow.top {
+  top: -16px;
+  bottom: auto;
+}
+.arrow.left {
+  left: 20%;
+}
+.arrow:after {
+  content: "";
+  position: absolute;
+  left: 20px;
+  top: -20px;
+  width: 25px;
+  height: 25px;
+  box-shadow: 6px 5px 9px -9px black;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.arrow.top:after {
+  bottom: -20px;
+  top: auto;
+}
 body::after {
   content: "";
   background: url('images/background.jpg');
@@ -154,7 +198,7 @@ body::after {
 
 .col-widget {
   flex: 0 0 auto;
-  width: 136.81px;
+  width: 135.81px;
 }
 
 .col-span-widget {
@@ -373,7 +417,7 @@ body::after {
 }
 
 .input-group-prepend {
-  width: 90px;
+  width: 60px;
 }
 
 .input-group-text {
@@ -421,7 +465,28 @@ body::after {
   line-height: 1;
   margin: 5px;
   background-color: rgba(255, 255, 255, 0.3);
-  ;
+
+}
+
+.btn-small:active{
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.disabled{
+  color:rgba(255, 255, 255, 0.3) !important;
+  border: 1px solid rgba(255, 255, 255, 0.095) !important;
+}
+
+.btn-xsmall {
+  border-radius: 5px;
+  padding: 0px;
+  min-width: 35px;
+
+  max-width: 30px;
+
+  color:#aaa;
+  border: 1px solid rgba(255, 255, 255, 0.095);
+  
 }
 
 
@@ -431,9 +496,7 @@ body::after {
   border-radius: 5px;
   padding: 0px;
   line-height: 1;
-  margin: 5px;
   background-color: rgba(255, 255, 255, 0.3);
-  ;
 }
 
 .btn-color {
@@ -445,6 +508,7 @@ body::after {
   ;
   color: #FFD843;
 }
+
 
 .btn-left {
   border-radius: 5px 0 0 5px;
@@ -463,7 +527,16 @@ body::after {
   border-radius: 0 5px 5px 0;
   margin-left: 0px !important;
 }
+.btn-left-round {
+  border-radius: 9999em 0 0 9999em;
+  margin-right: -2px !important;
+}
 
+
+.btn-right-round {
+  border-radius: 0 9999em 9999em 0;
+  margin-left: -2px !important;
+}
 .rotate .options .btn:active {
   color: #fff;
   background: #5372f0;
@@ -472,13 +545,12 @@ body::after {
 
 .wrapper .preview-img {
   flex-grow: 1;
+  z-index: 0;
   display: flex;
   overflow: scroll;
-
   margin-left: 10px;
   margin-right: 10px;
   align-items: center;
-  border: 1px white;
   justify-content: center;
 }
 
@@ -549,11 +621,13 @@ body::after {
   border-radius: 10px;
 }
 
-.btn-yellow {
+.btn-editor{
   font-size: 12px;
-  width: 80px;
-  height: 28;
+  line-height: 1.2;
+  height: auto;
   border-radius: 9999em;
+}
+.btn-yellow {
   color: black;
   background: #FFD843;
 }
