--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,36 @@ body {
   background: #2A2B2D;
 
 }
-.ui-tooltip, .arrow:after {
+body::after {
+  content: "";
+  background: url('../images/bg.jpg');
+  opacity: 0.05;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background-position: center;;
+  right: 0;
+  align-items: center;
+  position: absolute;
+  z-index: -1;
+}
+
+.ui-tooltip,
+.arrow:after {
   background: rgba(0, 0, 0, 0.60);
 }
+
 .ui-tooltip {
   font-size: 12px !important;
   border-radius: 20px !important;
   font: bold 14px "Helvetica Neue", Sans-Serif;
   box-shadow: 0 0 7px black;
-  border:0 !important;
+  border: 0 !important;
   background-color: rgba(0, 0, 0, 0.60) !important;
-  color: white  !important;
+  color: white !important;
 
 }
+
 .arrow {
   width: 70px;
   height: 16px;
@@ -38,13 +55,16 @@ body {
   margin-left: -35px;
   bottom: -16px;
 }
+
 .arrow.top {
   top: -16px;
   bottom: auto;
 }
+
 .arrow.left {
   left: 20%;
 }
+
 .arrow:after {
   content: "";
   position: absolute;
@@ -57,21 +77,10 @@ body {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
 .arrow.top:after {
   bottom: -20px;
   top: auto;
-}
-body::after {
-  content: "";
-  background: url('images/background.jpg');
-  opacity: 0.1;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  align-items: center;
-  position: absolute;
-  z-index: -1;
 }
 
 #layers {
@@ -103,15 +112,15 @@ body::after {
   margin-bottom: 10px;
 }
 
+.text-input {
+  border-radius: 0.375rem;
+}
+
 .ui-sortable-placeholder {
   background-color: rgba(200, 200, 200, 0.5);
-  /* Fundo visível */
   border: 2px dashed #FFD843;
-  /* Borda para destaque */
   height: 80px;
-  /* Mesma altura das camadas */
   min-width: 100%;
-  /* Largura total */
   margin: 0;
   border-radius: 5px;
 }
@@ -125,15 +134,10 @@ body::after {
   background: rgba(0, 0, 0, 0.0);
   border-radius: 5px;
   display: flex;
-  /* Usando flexbox para alinhar itens horizontalmente */
   align-items: center;
-  /* Centraliza verticalmente os itens */
   border: 1px solid rgba(255, 255, 255, 0.095);
   padding: 0px 10px;
-  /* Espaçamento entre o conteúdo e as bordas */
   cursor: move;
-  /* Indica que o item pode ser movido */
-
 }
 
 .btn-text {
@@ -152,18 +156,86 @@ body::after {
 
 .layer-img {
   width: 40px;
-  /* Defina o tamanho da imagem */
   height: 40px;
-  /* Defina o tamanho da imagem */
   margin-right: 10px;
-  /* Espaçamento entre a imagem e o nome */
+}
+
+.upload-div {
+  border: 2px dashed #ecf0f1;
+  color: #7f8c8d;
+  width: 100%;
+  height: 80px;
+  position: relative;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.upload-div div {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.upload-div span {
+  display: block;
+  font-size: 10px;
+  text-transform: uppercase;
+}
+
+.images-btn-area {
+  height: 300px;
+  overflow-y: scroll;
+  margin-top: 5px;
+}
+
+.images-btn-area .item {
+  cursor: pointer;
+  width: 50%;
+  height: 100px;
+  max-height: 150px;
+  display: block;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+
+}
+
+.upload-div input {
+  z-index: 99999999999999999999;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 65px;
+  cursor: pointer;
+}
+
+.remove-image-btn {
+  font-size: 18px;
+  color: black;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+}
+
+.images-btn-area .item img {
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  margin: 2px;
 }
 
 .layer-name {
   flex-grow: 1;
-  /* Faz com que o nome da camada ocupe o espaço restante */
   text-align: center;
-  /* Centraliza o nome */
 }
 
 .layer:focus {
@@ -211,11 +283,10 @@ body::after {
   width: 80vw;
   height: 80vh;
   overflow: hidden;
-  /* Esconde conteúdo que ultrapassa o tamanho */
   justify-content: center;
   align-items: center;
   padding: 25px 25px 25px;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(255, 255, 255, 0.095);
@@ -233,10 +304,8 @@ body::after {
   position: relative;
   display: inline-block;
   border-bottom: 1px dotted black;
-  /* If you want dots under the hoverable text */
 }
 
-/* Tooltip text */
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 120px;
@@ -245,17 +314,13 @@ body::after {
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
-
-  /* Position the tooltip text - see examples below! */
   position: absolute;
   z-index: 1;
 }
 
 .editor-panel::-webkit-scrollbar {
   width: 3px;
-  /* Largura */
   height: 3px;
-  /* Altura */
   background-color: transparent;
 }
 
@@ -312,16 +377,12 @@ body::after {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* Centralizar horizontalmente o conteúdo */
   justify-content: center;
-  /* Centralizar verticalmente o conteúdo */
   margin: 5px;
   line-height: 1.2;
-  /* Ajustar o espaçamento do texto */
   min-width: 80px;
   min-height: 80px;
   text-align: center;
-  /* Centralizar o texto no botão */
 }
 
 .editor-panel .title {
@@ -450,9 +511,7 @@ body::after {
   left: 0;
   position: absolute;
   width: 100%;
-  /* Garante que o conteúdo ocupe toda a largura */
   text-align: right;
-  /* Alinha o botão à direita */
 }
 
 .btn-small {
@@ -468,12 +527,12 @@ body::after {
 
 }
 
-.btn-small:active{
+.btn-small:active {
   background-color: rgba(255, 255, 255, 0.7);
 }
 
-.disabled{
-  color:rgba(255, 255, 255, 0.3) !important;
+.disabled {
+  color: rgba(255, 255, 255, 0.3) !important;
   border: 1px solid rgba(255, 255, 255, 0.095) !important;
 }
 
@@ -484,9 +543,9 @@ body::after {
 
   max-width: 30px;
 
-  color:#aaa;
+  color: #aaa;
   border: 1px solid rgba(255, 255, 255, 0.095);
-  
+
 }
 
 
@@ -527,6 +586,7 @@ body::after {
   border-radius: 0 5px 5px 0;
   margin-left: 0px !important;
 }
+
 .btn-left-round {
   border-radius: 9999em 0 0 9999em;
   margin-right: -2px !important;
@@ -537,6 +597,7 @@ body::after {
   border-radius: 0 9999em 9999em 0;
   margin-left: -2px !important;
 }
+
 .rotate .options .btn:active {
   color: #fff;
   background: #5372f0;
@@ -556,12 +617,10 @@ body::after {
 
 .preview-img::-webkit-scrollbar {
   display: none;
-  /* Esconde a barra de rolagem no Chrome, Edge e Safari */
 }
 
 .preview-img {
   scrollbar-width: none;
-  /* Esconde a barra de rolagem no Firefox */
   object-fit: contain;
   border: 1px;
 }
@@ -621,12 +680,13 @@ body::after {
   border-radius: 10px;
 }
 
-.btn-editor{
+.btn-editor {
   font-size: 12px;
   line-height: 1.2;
   height: auto;
   border-radius: 9999em;
 }
+
 .btn-yellow {
   color: black;
   background: #FFD843;
@@ -665,18 +725,13 @@ body::after {
   .wrapper .editor-panel button {
     display: flex;
     flex-direction: column;
-    /* Colocar os elementos em coluna (ícone em cima, texto embaixo) */
     align-items: center;
-    /* Centralizar horizontalmente o conteúdo */
     justify-content: center;
-    /* Centralizar verticalmente o conteúdo */
     margin: 5px;
     line-height: 1.2;
-    /* Ajustar o espaçamento do texto */
     min-width: 64px;
     min-height: 64px;
     text-align: center;
-    /* Centralizar o texto no botão */
   }
 
   .wrapper .preview-img {
@@ -802,7 +857,6 @@ body::after {
 
 }
 
-/* ! Image Resizer */
 .imageResizer {
   position: absolute;
   top: 100%;
