--- a/css/editor.css
+++ b/css/editor.css
@@ -202,6 +202,7 @@ textarea:focus {
     background: rgba(0, 0, 0, 0.9);
     margin: 0px;
     padding: 0px;
+    text-transform: uppercase;
     color: white
 }
 
