--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,27 @@ body::after {
 
 }
 
+.background-btn-area {
+  height: 300px;
+  overflow-y: scroll;
+  margin-top: 5px;
+}
+
+.background-btn-area .item {
+  cursor: pointer;
+  width: 50%;
+  height: 100px;
+  max-height: 150px;
+  display: block;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+
+}
+
+
 .upload-div input {
   z-index: 99999999999999999999;
   position: absolute;
@@ -279,6 +300,18 @@ body::after {
   height: 48px;
 }
 
+.project-info{
+  z-index: 9999999999999999999999;
+  bottom:5px;
+  font-size: 11px;
+  color:white;
+  position:absolute;
+  right:8px;
+  color:white;
+
+  cursor: pointer;
+}
+
 .container2 {
   width: 80vw;
   height: 80vh;
@@ -286,7 +319,7 @@ body::after {
   justify-content: center;
   align-items: center;
   padding: 25px 25px 25px;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(255, 255, 255, 0.095);
@@ -401,7 +434,7 @@ body::after {
 .editor-panel .btn {
   outline: none;
   height: 40px;
-  font-size: 26px;
+  font-size: 22px;
   color: #6c757d;
   background: rgba(0, 0, 0, 0.0);
   border-radius: 0.625em;
@@ -742,7 +775,35 @@ body::after {
     object-fit: contain;
   }
 }
+@media screen and (min-width: 821px) and (max-width:912px) {
+  .container2 {
+    width: auto;
+    height: auto;
 
+  }
+
+  .container2 .wrapper {
+    flex-wrap: wrap-reverse;
+
+  }
+
+  .wrapper .editor-panel {
+    justify-content: flex-start;
+    flex-direction: row;
+    height: 100px;
+    overflow-x: scroll;
+    margin: 20px 0px 20px 0px;
+    width: auto;
+  }
+
+  .wrapper .preview-img {
+    width: auto;
+    height: auto;
+    margin-left: 0px;
+    margin-right: 0px;
+
+  }
+}
 @media screen and (min-width: 720px) and (max-width:820px) {
   .container2 {
     width: auto;
@@ -813,18 +874,21 @@ body::after {
 
 }
 
-@media screen and (min-width: 821px) and (max-width:1024px) {
+@media screen and (min-width: 1000px) and (max-width:1025px) {
 
   .container2 {
-    width: auto;
     height: auto;
+  }
 
+  .wrapper{
+    width: 100%;
+    height: 100%;
   }
 
   .wrapper .editor-panel {
     justify-content: flex-start;
     flex-direction: column;
-    height: 450px;
+    height: 300px;
     overflow-x: scroll;
     margin: 20px 0px 20px 0px;
     width: auto;
@@ -848,14 +912,15 @@ body::after {
   }
 
   .preview-img {
-    width: auto;
-    height: auto;
+    width: 500px;
+    height:350px;
     margin-left: 0px;
     margin-right: 0px;
     object-fit: contain;
   }
 
 }
+
 
 .imageResizer {
   position: absolute;
