--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
   justify-content: center;
   background: #2A2B2D;
-
+  font: "Helvetica Neue", Sans-Serif;
 }
 body::after {
   content: "";
@@ -37,7 +37,7 @@ body::after {
 
 .ui-tooltip {
   font-size: 12px !important;
-  border-radius: 20px !important;
+  border-radius: 10px !important;
   font: bold 14px "Helvetica Neue", Sans-Serif;
   box-shadow: 0 0 7px black;
   border: 0 !important;
