--- a/css/style.css
+++ b/css/style.css
@@ -747,7 +747,7 @@ body::after {
 
 @media screen and (max-width: 719px) {
   .container2 {
-    padding: 25px;
+    padding: 10px;
     width: auto;
     height: auto;
   }
@@ -988,7 +988,13 @@ body::after {
   width: 100%;
   padding:10px 10px 10px 10px;
 }
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 
+}
 .imageResizer .column2 label {
   font-size: 1.06rem;
 }
