--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@
 }
 
 body {
-  display: flex;
-  min-height: 100vh;
   align-items: center;
   justify-content: center;
   background: #2F3336;
@@ -321,8 +319,8 @@ body::after {
 
 
 .container2 {
-  width: 80vw;
-  height: auto;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   justify-content: center;
   align-items: center;
@@ -385,7 +383,7 @@ body::after {
 .container2 .wrapper {
   display: flex;
   overflow: hidden;
-  height: auto;
+  height: 90%;
   border: 1px solid rgba(255, 255, 255, 0.095);
   border-left: 0;
   border-right: 0;
@@ -753,7 +751,7 @@ body::after {
   .container2 {
     padding: 10px;
     width: auto;
-    height: auto;
+    height: 90%;
   }
 
   .logo{
@@ -810,7 +808,7 @@ body::after {
 @media screen and (min-width: 821px) and (max-width:912px) {
   .container2 {
     width: auto;
-    height: auto;
+    height: 100%;
 
   }
 
@@ -825,12 +823,12 @@ body::after {
     height: 100px;
     overflow-x: scroll;
     margin: 20px 0px 20px 0px;
-    width: auto;
+    width: 100%;
   }
 
   .wrapper .preview-img {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     margin-left: 0px;
     margin-right: 0px;
 
@@ -839,7 +837,7 @@ body::after {
 @media screen and (min-width: 720px) and (max-width:820px) {
   .container2 {
     width: auto;
-    height: auto;
+    height: 100%;
 
   }
 
@@ -876,9 +874,13 @@ body::after {
   .wrapper .editor-panel {
     min-width: 70px;
     max-width: 70px;
-    height: 450px;
     overflow-x: hidden !important;
     overflow-y: scroll !important;
+  }
+
+  .wrapper
+  {
+    height: 89% !important;
   }
 
   .options .btn {
@@ -909,12 +911,12 @@ body::after {
 @media screen and (min-width: 1000px) and (max-width:1025px) {
 
   .container2 {
-    height: auto;
+    height: 100%;
   }
 
   .wrapper{
     width: 100%;
-    height: 100%;
+    height: 85% !important;
   }
 
   .wrapper .editor-panel {
@@ -1005,7 +1007,6 @@ body::after {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-
 }
 .imageResizer .column2 label {
   font-size: 1.06rem;
