--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,7 @@ body::after {
   align-items: center;
   color:white;
   cursor: pointer;
+  margin-right: 10px;
 }
 
 
@@ -402,9 +403,7 @@ body::after {
   -webkit-mask-image: linear-gradient(180deg, #000 50%, transparent);
 }
 
-#widget-zoom {
-  top: 0;
-}
+
 
 .logo{
   width: 100px;
@@ -766,12 +765,8 @@ body::after {
     flex-wrap: wrap-reverse;
 
   }
-  #widget-zoom {
-    position:fixed;
-    top: 0;
-    width: 100%;
-  }
-  
+
+
   .wrapper .editor-panel {
     justify-content: flex-start;
     flex-direction: row;
