--- a/css/style.css
+++ b/css/style.css
@@ -328,8 +328,6 @@ body::after {
   background: rgba(47, 51, 54, 0.5);
   border-radius: 5px;
   color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(255, 255, 255, 0.095);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   position: relative;
 }
 
@@ -361,7 +359,6 @@ body::after {
   width: 3px;
   height: 3px;
   background-color: transparent;
-  display: none;
 }
 
 .editor-panel::-webkit-scrollbar-track {
@@ -373,7 +370,7 @@ body::after {
 }
 
 .editor-panel::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 216, 67, 0.2);
+  background-color: rgba(252, 202, 0, 0.74);
   border-radius: 10px;
 }
 
@@ -400,7 +397,7 @@ body::after {
   border:1px;
   flex-direction: column;
   height: 100%;
-  -webkit-mask-image: linear-gradient(180deg, #000 50%, transparent);
+
 }
 
 
@@ -737,7 +734,6 @@ body::after {
 }
 
 .btn-mini-wrapper{
-  width: 100px;
   text-align: end;
 }
 
@@ -745,7 +741,12 @@ body::after {
   color: black;
   background: #ddbe3f;
 }
-
+@media screen and (min-width: 1024px){
+  
+  .wrapper .editor-panel {
+    -webkit-mask-image: linear-gradient(180deg, #000 50%, transparent);
+  }
+}
 @media screen and (max-width: 719px) {
   .container2 {
     padding: 10px;
@@ -754,8 +755,11 @@ body::after {
   }
 
   .logo{
+    display: flex;
     width: 70px;
     height: 18px;
+    justify-content: center;
+    align-items: center;
   }
 
   .row2{
@@ -768,7 +772,7 @@ body::after {
 
 
   .wrapper .editor-panel {
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: row;
     height: 70px;
     overflow-x: scroll;
@@ -776,8 +780,8 @@ body::after {
     position:fixed;
     bottom:0;
     left:0;
-    background-color: rgba(0, 0, 0, 0.60);
-    -webkit-mask-image: linear-gradient(90deg, #000 100%, transparent);
+    background-color: rgba(74, 75, 83, 0);
+    filter: drop-shadow(1.35rem 1.35rem 1.4rem rgba(0, 0, 0, 0.5));
   }
 
   .wrapper .editor-panel button {
@@ -785,9 +789,9 @@ body::after {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 5px;
     line-height: 1.2;
-    min-width: 64px;
+    min-width: 20vw;
+    font-size: 18px;
     min-height: 64px;
     text-align: center;
   }
